<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:src="@drawable/title"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/our_menu"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="10dp"

        />
    
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="50dp">


        <Button
            android:id="@+id/buttonColdDrinks"
            android:text="@string/cold_drinks"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            android:textAllCaps="true"
            android:backgroundTint="@color/magenta"

            />

        <Button
            android:id="@+id/buttonHotDrinks"
            android:text="@string/hot_drinks"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:layout_marginLeft="@dimen/menu_buttons_margin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            android:textAllCaps="true"
            android:backgroundTint="@color/magenta"

            />

        <Button
            android:id="@+id/buttonSweets"
            android:text="@string/sweets"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            android:textAllCaps="true"
            android:backgroundTint="@color/magenta"

            />

        <Button
            android:id="@+id/buttonSalties"
            android:text="@string/salties"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:layout_marginLeft="@dimen/menu_buttons_margin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            android:textAllCaps="true"
            android:backgroundTint="@color/magenta"

            />


        <Button
            android:id="@+id/buttonCombos"
            android:text="@string/combos"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            android:textAllCaps="true"
            android:backgroundTint="@color/magenta"

            />

        <Button
            android:id="@+id/buttonCustom"
            android:text="@string/custom"
            android:paddingHorizontal="@dimen/menu_buttons_padding"
            android:layout_marginLeft="@dimen/menu_buttons_margin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menu_buttons_text"
            android:paddingVertical="@dimen/menu_buttons_padding_v"
            android:textAllCaps="true"
            android:backgroundTint="@color/magenta"

            />


    </GridLayout>


</LinearLayout>